--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#FF69B4" />
     <meta name="description" content="カップル向け9マスイメージアプリ" />
+
+    <!-- OGP設定 -->
+    <meta
+      property="og:title"
+      content="9マスイメージ - カップル向けイメージ共有アプリ"
+    />
+    <meta
+      property="og:description"
+      content="相手を9つのジャンルでイメージしてシェアしよう！"
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://9grid-image.vercel.app/" />
+    <meta property="og:image" content="%PUBLIC_URL%/ogp.png" />
+    <meta property="og:site_name" content="9マスイメージ" />
+    <meta property="og:locale" content="ja_JP" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="9マスイメージ - カップル向けイメージ共有アプリ"
+    />
+    <meta
+      name="twitter:description"
+      content="相手を9つのジャンルでイメージしてシェアしよう！"
+    />
+    <meta name="twitter:image" content="%PUBLIC_URL%/ogp.png" />
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
