--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,13 @@
     <meta name="theme-color" content="#FF69B4" />
     <meta name="description" content="カップル向け9マスイメージアプリ" />
 
+    <!-- Google AdSense -->
+    <script
+      async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7166490585913338"
+      crossorigin="anonymous"
+    ></script>
+
     <!-- OGP設定 -->
     <meta
       property="og:title"
